For details of when a commit makes it into the stable branch see the ReleaseNotes file.

2016-05-10 ruhllatio
	Fix: Category Parent->Child name return function after Misc move
	Fix: WEB-DL shows as option in My TV shows when not used as a category #2110
	Fix: 404 function had no parameter for reason even though it was being set and clean up BasePage
	Mrg: Feature db #2136 @niel 
2016-05-10 DariusIII
	Fix: Prevent deadlocks on binaries and releases update (fix @ruhllatio).
	Upd: Add couchpotato icon to Gamma theme. Fix issue #2115
2016-05-09 DariusIII
	Fix: Partitioning in patch 0436.
	Chg: Replace requestid_threaded.py with requestid.php in ProcessReleases class.
2016-05-08 niel
	Mrg: Changing table 'category' to 'categories' along with references to categoryid => categories_id.
		**NOTE** This involves changes to your releases table. It will take some time,
		potentially a very long time, depending on the number of releases you have.
	Chg: Changing releases.preid to releases.predb_id in line with lithium conventions.
	Chg: Changing releases.musicinfoid => releases.musicinfo_id inline with lithium conventions.
	Chg: Changing releases.consoleinfoid => releases.consoleinfo_id inline with lithium conventions.
	Chg: Changing releases.bookinfoid => releases.bookinfo_id inline with lithium conventions.
	Chg: Changing various tables with releaseid => releases_id inline with lithium conventions.
2016-05-07 niel
	Chg: alter subsection,name fields to settings for recaptcha.
	Mrg: PR 2135, from zetas - Fix Recaptcha settings.
	Fix: Reference to configuration file/location for IRC Scraper in tmux-edit.tpl.
2016-05-06 DariusIII
	Fix: Missing use statement for Category class in admin pages.
2016-05-06 bart39
	Fix: TV categorization mismatches.
		** NOTE *** - you will need to do the following to fix the categorization:
		`php /var/www/nZEDb/misc/testing/Release/recategorize.php all`
		this will take a while to complete.
2016-05-06 DariusIII